@@ -1,0 +1,6 @@
+galpy.potential.Potential.tdyn
+===============================
+
+.. automethod:: galpy.potential.Potential.tdyn
+
+
