@@ -1,0 +1,5 @@
+galpy.potential.tdyn
+=====================
+
+.. autofunction:: galpy.potential.tdyn
+
