@@ -120,6 +120,7 @@ to_amuse= Potential.to_amuse
 zvc= Potential.zvc
 zvc_range= Potential.zvc_range
 rhalf= Potential.rhalf
+tdyn= Potential.tdyn
 #
 # Classes
 #
