@@ -1557,6 +1557,7 @@ def test_potential_method_returntype():
     assert isinstance(pot.zvc_range(-1.9,0.2),units.Quantity), 'Potential method zvc_range does not return Quantity when it should'
     assert isinstance(pot.zvc(0.4,-1.9,0.2),units.Quantity), 'Potential method zvc does not return Quantity when it should'
     assert isinstance(pot.rhalf(),units.Quantity), 'Potential method rhalf does not return Quantity when it should'
+    assert isinstance(pot.tdyn(1.1),units.Quantity), 'Potential method tdyn does not return Quantity when it should'
     return None
 
 def test_dissipativeforce_method_returntype():
@@ -1711,6 +1712,10 @@ def test_potential_method_returnunit():
         pot.rhalf().to(units.kpc)
     except units.UnitConversionError:
         raise AssertionError('Potential method rhalf does not return Quantity with the right units')
+    try:
+        pot.tdyn(1.4).to(units.Gyr)
+    except units.UnitConversionError:
+        raise AssertionError('Potential method tdyn does not return Quantity with the right units')
     return None
 
 def test_planarPotential_method_returnunit():
@@ -1810,6 +1815,7 @@ def test_potential_method_value():
     assert numpy.all(numpy.fabs(pot.zvc_range(-1.9,0.2).to(units.kpc).value-potu.zvc_range(-1.9,0.2)*ro) < 10.**-8.), 'Potential method zvc_range does not return the correct value as Quantity'
     assert numpy.all(numpy.fabs(pot.zvc(0.4,-1.9,0.2).to(units.kpc).value-potu.zvc(0.4,-1.9,0.2)*ro) < 10.**-8.), 'Potential method zvc_range does not return the correct value as Quantity'
     assert numpy.fabs(pot.rhalf().to(units.kpc).value-potu.rhalf()*ro) < 10.**-8., 'Potential method rhalf does not return the correct value as Quantity'
+    assert numpy.fabs(pot.tdyn(1.4).to(units.Gyr).value-potu.tdyn(1.4)*conversion.time_in_Gyr(vo,ro)) < 10.**-8., 'Potential method tdyn does not return the correct value as Quantity'
     return None
 
 def test_planarPotential_method_value():
@@ -1871,6 +1877,7 @@ def test_potential_function_returntype():
     assert isinstance(potential.zvc_range(pot,-1.9,0.2),units.Quantity), 'Potential function zvc_range does not return Quantity when it should'
     assert isinstance(potential.zvc(pot,0.4,-1.9,0.2),units.Quantity), 'Potential function zvc does not return Quantity when it should'
     assert isinstance(potential.rhalf(pot),units.Quantity), 'Potential function rhalf does not return Quantity when it should'
+    assert isinstance(potential.tdyn(pot,1.4),units.Quantity), 'Potential function tdyn does not return Quantity when it should'
     return None
 
 def test_planarPotential_function_returntype():
@@ -2005,6 +2012,10 @@ def test_potential_function_returnunit():
         potential.rhalf(pot).to(units.kpc)
     except units.UnitConversionError:
         raise AssertionError('Potential function rhalf does not return Quantity with the right units')
+    try:
+        potential.tdyn(pot,1.4).to(units.Gyr)
+    except units.UnitConversionError:
+        raise AssertionError('Potential function tdyn does not return Quantity with the right units')
     return None
 
 def test_planarPotential_function_returnunit():
@@ -2098,6 +2109,7 @@ def test_potential_function_value():
     assert numpy.all(numpy.fabs(potential.zvc_range(pot,-1.9,0.2).to(units.kpc).value-potential.zvc_range(potu,-1.9,0.2)*ro) < 10.**-8.), 'Potential function zvc_range does not return the correct value as Quantity'
     assert numpy.all(numpy.fabs(potential.zvc(pot,0.4,-1.9,0.2).to(units.kpc).value-potential.zvc(potu,0.4,-1.9,0.2)*ro) < 10.**-8.), 'Potential function zvc_range does not return the correct value as Quantity'
     assert numpy.fabs(potential.rhalf(pot).to(units.kpc).value-potential.rhalf(potu)*ro) < 10.**-8., 'Potential function rhalf does not return the correct value as Quantity'
+    assert numpy.fabs(potential.tdyn(pot,1.4).to(units.Gyr).value-potential.tdyn(potu,1.4)*conversion.time_in_Gyr(vo,ro)) < 10.**-8., 'Potential function tdyn does not return the correct value as Quantity'
     return None
 
 def test_planarPotential_function_value():
@@ -2165,6 +2177,7 @@ def test_potential_method_inputAsQuantity():
     assert numpy.all(numpy.fabs(pot.ttensor(1.1*ro,0.1*ro,eigenval=True,use_physical=False)-potu.ttensor(1.1,0.1,eigenval=True)) < 10.**-8.), 'Potential method ttensor does not return the correct value when input is Quantity'
     assert numpy.all(numpy.fabs(pot.zvc_range(-92000*units.km**2/units.s**2,45.*units.kpc*units.km/units.s,use_physical=False)-potu.zvc_range(-92000/vo**2,45./ro.to_value(units.kpc)/vo)) < 10.**-8.), 'Potential method zvc_range does not return the correct value when input is Quantity'
     assert numpy.all(numpy.fabs(pot.zvc(0.4*ro,-92000*units.km**2/units.s**2,45.*units.kpc*units.km/units.s,use_physical=False)-potu.zvc(0.4,-92000/vo**2,45./ro.to_value(units.kpc)/vo)) < 10.**-8.), 'Potential method zvc does not return the correct value when input is Quantity'
+    assert numpy.fabs(pot.tdyn(1.1*ro,use_physical=False)-potu.tdyn(1.1)) < 10.**-8., 'Potential method tdyn does not return the correct value when input is Quantity'
     return None
 
 def test_planarPotential_method_inputAsQuantity():
@@ -2273,6 +2286,7 @@ def test_potential_function_inputAsQuantity():
     assert numpy.all(numpy.fabs(potential.ttensor(pot,1.1*ro,0.1*ro,eigenval=True,use_physical=False)-potential.ttensor(potu,1.1,0.1,eigenval=True)) < 10.**-8.), 'Potential function ttensor does not return the correct value when input is Quantity'
     assert numpy.all(numpy.fabs(potential.zvc_range(pot,-92000*units.km**2/units.s**2,45.*units.kpc*units.km/units.s,use_physical=False)-potential.zvc_range(potu,-92000/vo**2,45./ro.to_value(units.kpc)/vo)) < 10.**-8.), 'Potential function zvc_range does not return the correct value when input is Quantity'
     assert numpy.all(numpy.fabs(potential.zvc(pot,0.4*ro,-92000*units.km**2/units.s**2,45.*units.kpc*units.km/units.s,use_physical=False)-potential.zvc(potu,0.4,-92000/vo**2,45./ro.to_value(units.kpc)/vo)) < 10.**-8.), 'Potential function zvc does not return the correct value when input is Quantity'
+    assert numpy.fabs(potential.tdyn(pot,1.1*ro,use_physical=False)-potential.tdyn(potu,1.1)) < 10.**-8., 'Potential function tdyn does not return the correct value when input is Quantity'
     return None
 
 def test_dissipativeforce_function_inputAsQuantity():
